# kra-rs

./: Cargo.toml  flake.nix  readme.md  readme.org
examples/: parse.rs
kra/: Cargo.toml
kra-file/: Cargo.toml
kra-file/examples/: parse.rs
kra-file/src/: data.rs  dummy.rs  error.rs  helper.rs  layer.rs  lib.rs  metadata.rs  parse.rs
kra-macro/: Cargo.toml
kra-macro/src/: lib.rs
kra-macro/tests/: 00-typical-use.rs
kra/examples/: parse.rs
kra/src/: color.rs  data.rs  error.rs  helper.rs  layer.rs  lib.rs  metadata.rs
kra/src/layer/: mod.rs
src/: error.rs  lib.rs  metadata.rs
src/layer/: mod.rs
