[package]
name = "kra_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
#TODO: document feature (it disallows working with data)
no_data = []

[dependencies]
zip = "0.6"
thiserror="1.0"
getset="0.1.2"
quick-xml = "0.31"
uuid-simd = "0.8.0"
uuid = "1.2.2"
ordered-float = "4.2.0"
enum-as-inner = "0.6.1"
defile = "0.2.1"
paste = "1.0.15"

[dependencies.kra-macro]
path = "../kra-macro"
version = "0.1"
