[package]
name = "kra_file"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
#TODO: implement this feature (do not load data)
#no_data = []

[dependencies]
zip = "4.0"
thiserror="2.0"
getset="0.1.5"
quick-xml = "0.37"
uuid-simd = "0.8.0"
uuid = "1.17"
ordered-float = "5.0"
enum-as-inner = "0.6.1"
defile = "0.2.1"
paste = "1.0.15"

[dependencies.kra-macro]
path = "../kra-macro"
version = "0.1"
