[package]
name = "kra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
thiserror="1.0"
getset="0.1.2"
quick-xml = "0.31"

#TODO: publish the macro crate, then rewrite here
#TODO: build-dependencies?
[dependencies.kra-macro]
path = "../kra-macro"
